--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="/src/css/styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
   <h1>Portfolio</h1>
   <nav>
     <ul>
-      <li><a href="/src/html/about.html">Enter</a></li>
+      <li><a href="src/html/about.html">Enter</a></li>
 
     </ul>
   </nav>
