--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub Projects - My Portfolio</title>
-  <link rel="stylesheet" href="/src/css/styles.css">
-  <link rel="stylesheet" href="/src/css/projects.css">
+  <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="stylesheet" href="src/css/projects.css">
 </head>
 <body>
   <h1>GitHub Projects</h1>
   <div id="projects"></div>
   <nav>
     <ul>
-        <li><a href="/src/html/about.html">About me</a></li>
-        <li><a href="/src/html/projects.html">GitHub Projects</a></li>
-        <li><a href="/src/html/resume.html">Resume</a></li>
+        <li><a href="src/html/about.html">About me</a></li>
+        <li><a href="src/html/projects.html">GitHub Projects</a></li>
+        <li><a href="src/html/resume.html">Resume</a></li>
     </ul>
   </nav>
-  <script src="/src/js/script.js"></script>
+  <script src="src/js/script.js"></script>
 </body>
 </html>
