--- a/src/html/resume.html
+++ b/src/html/resume.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume - My Portfolio</title>
-  <link rel="stylesheet" href="./src/css/styles.css">
-  <link rel="stylesheet" href="./src/css/resume.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/resume.css">
 </head>
 <body>
   <h1>Resume</h1>
@@ -15,9 +15,9 @@
   <nav>
     <nav>
         <ul>
-          <li><a href="./src/html/about.html">About me</a></li>
-          <li><a href="./src/html/projects.html">GitHub Projects</a></li>
-          <li><a href="./src/html/resume.html">Resume</a></li>
+          <li><a href="./html/about.html">About me</a></li>
+          <li><a href="./html/projects.html">GitHub Projects</a></li>
+          <li><a href="./html/resume.html">Resume</a></li>
         </ul>
       </nav>
   </nav>
