--- a/src/html/about.html
+++ b/src/html/about.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - My Portfolio</title>
-  <link rel="stylesheet" href="./css/styles.css">
-  <link rel="stylesheet" href="./css/about.css">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
   <h1>About me</h1>
@@ -15,9 +15,9 @@
   <p>Contact</p>
   <nav>
     <ul>
-      <li><a href="./html/about.html">About me</a></li>
-      <li><a href="./html/projects.html">GitHub Projects</a></li>
-      <li><a href=".//html/resume.html">Resume</a></li>
+      <li><a href="./about.html">About me</a></li>
+      <li><a href="./projects.html">GitHub Projects</a></li>
+      <li><a href="./resume.html">Resume</a></li>
     </ul>
   </nav>
 </body>
