first contents cv

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,21 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - My Portfolio</title>
+  <title>About me - My Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
+  <!-- ---------container-------------- -->
+  <div class="container">
+    <!-- ---------header-------------- -->
+    <header>
   <h1>About me</h1>
-  <p>Laura</p>
-  <p>Something</p>
-  <p>Contact</p>
-  <nav>
+
+  <nav><!-- ------------links----------- -->
     <ul>
       <li><a href="./about.html">About me</a></li>
       <li><a href="./projects.html">GitHub Projects</a></li>
       <li><a href="./resume.html">Resume</a></li>
     </ul>
   </nav>
+</header><!-- --------header END--------------- -->
+
+  <!-- -----------main------------ -->
+  <main  id="aboutpage">
+    <p>Laura</p>
+    <p>Something</p>
+    <p>Contact</p>
+  </main><!-- --------main END--------------- -->
+
+  <!-- --------footer--------------- -->
+  <footer>
+  <p>© 2024 Laura Levistö</p>
+  </footer>
+
+</div><!-- ----------container END------------- -->
+
 </body>
 </html>
