--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -9,15 +9,34 @@
   <link rel="stylesheet" href="../css/projects.css">
 </head>
 <body>
-  <h1>GitHub Projects</h1>
-  <div id="projects"></div>
-  <nav>
-    <ul>
-        <li><a href="./about.html">About me</a></li>
-        <li><a href="./projects.html">GitHub Projects</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-    </ul>
-  </nav>
-  <script src="../js/script.js"></script>
+  <!-- ---------container-------------- -->
+  <div class="container">
+    <!-- ----------header------------- -->
+    <header>
+      <h1>GitHub Projects</h1>
+
+      <nav><!-- -----------links------------ -->
+        <ul>
+          <li><a href="./about.html">About me</a></li>
+          <li><a href="./projects.html">GitHub Projects</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+        </ul>
+      </nav>
+     </header><!-- --------header END--------------- -->
+
+        <!-- --------main--------------- -->
+        <main id="projects">
+            
+        </main><!-- --------main END--------------- -->
+
+    <!-- ---------footer-------------- -->
+    <footer>
+      <p>© 2024 Laura Levistö</p>
+    </footer>
+
+  </div><!-- ---------container END-------------- -->
+
+  <!-- ----------js scripts------------- -->
+  <script src="../js/projectscript.js"></script>
 </body>
 </html>
