--- a/index.html
+++ b/index.html
@@ -8,12 +8,30 @@
   <link rel="stylesheet" href="./src/css/styles.css">
 </head>
 <body>
+  <!-- ---------container-------------- -->
+  <div class="container">
+    <!-- ---------header-------------- -->
+    <header>
   <h1>Portfolio</h1>
-  <nav>
+
+  <nav><!-- ------------links----------- -->
     <ul>
       <li><a href="./src/html/about.html">Enter</a></li>
-
     </ul>
   </nav>
+</header><!-- --------header END--------------- -->
+
+  <!-- -----------main------------ -->
+  <main   id="startpage">      
+
+  </main><!-- --------main END--------------- -->
+
+    <!-- --------footer--------------- -->
+    <footer>
+    <p>© 2024 Laura Levistö</p>
+    </footer>
+
+</div> <!-- ----------container END------------- -->
+
 </body>
 </html>
