--- a/src/html/resume.html
+++ b/src/html/resume.html
@@ -24,14 +24,21 @@
       </nav>
     </header><!-- --------header END--------------- -->
 
-      <!-- -----------main------------ -->
-      <main  id="resumepage">
-        <h2>Finnish CV</h2>
-        <img src="../../images/cvfin.png" alt="Finnish CV" class="cv-image" onclick="openModal(this.src)">
-        
-        <h2>English CV</h2>
-        <img src="../../images/cveng.png" alt="English CV" class="cv-image" onclick="openModal(this.src)">
-      </main><!-- --------main END--------------- -->
+    <!-- -----------main------------ -->
+    <main id="resumepage">
+      <div class="cv-grid">
+        <div class="cv-item">
+          <h2>Finnish CV</h2>
+          <h3>Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window</a></h3>
+          <img src="../../images/cvfin.png" alt="Finnish CV" class="cv-image" onclick="openModal(this.src)">
+        </div>
+        <div class="cv-item">
+          <h2>English CV</h2>
+          <h3>Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window</a></h3>
+          <img src="../../images/cveng.png" alt="English CV" class="cv-image" onclick="openModal(this.src)">
+        </div>
+      </div>
+    </main><!-- --------main END--------------- -->
 
     <!-- --------footer--------------- -->
     <footer>
