--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,7 +19,7 @@
     <ul>
       <li><a href="./about.html">About me</a></li>
       <li><a href="./projects.html">GitHub Projects</a></li>
-      <li><a href="./resume.html">Resume</a></li>
+      <li><a href="./cv.html">CV</a></li>
     </ul>
   </nav>
 </header><!-- --------header END--------------- -->
