--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume - My Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/resume.css">
+  <link rel="stylesheet" href="../css/cv.css">
 </head>
 <body>
   <!-- ---------container-------------- -->
@@ -19,7 +19,7 @@
       <ul>
           <li><a href="./about.html">About me</a></li>
           <li><a href="./projects.html">GitHub Projects</a></li>
-          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="./cv.html">CV</a></li>
         </ul>
       </nav>
     </header><!-- --------header END--------------- -->
