--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume - My Portfolio</title>
+  <title>CV - My Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/cv.css">
 </head>
@@ -13,7 +13,7 @@
   <div class="container">
     <!-- ---------header-------------- -->
     <header>
-     <h1>Resume</h1>
+     <h1>My CV</h1>
 
       <nav><!-- ------------links----------- -->
       <ul>
