--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -13,7 +13,7 @@
   <div class="container">
     <!-- ----------header------------- -->
     <header>
-      <h1>GitHub Projects</h1>
+      <h1>Portfolio</h1>
 
       <nav><!-- -----------links------------ -->
         <ul>
@@ -26,6 +26,7 @@
 
         <!-- --------main--------------- -->
         <main id="projects">
+          <h1>GitHub Projects</h1>
             
         </main><!-- --------main END--------------- -->
 
