--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -13,7 +13,7 @@
   <div class="container">
     <!-- ---------header-------------- -->
     <header>
-     <h1>My CV</h1>
+     <h1>Portfolio</h1>
 
       <nav><!-- ------------links----------- -->
       <ul>
@@ -26,16 +26,17 @@
 
     <!-- -----------main------------ -->
     <main id="resumepage">
+      <h1>CV</h1>
       <div class="cv-grid">
         <div class="cv-item">
           <h2>Finnish CV</h2>
-          <h3>Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window</a></h3>
-          <img src="../../images/cvfin.png" alt="Finnish CV" class="cv-image" onclick="openModal(this.src)">
+          <h3>Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window</a></h3><!-- new window -->
+          <img src="../../images/cvfin.png" alt="Finnish CV" class="cv-image" onclick="openModal(this.src)"><!-- modal -->
         </div>
         <div class="cv-item">
           <h2>English CV</h2>
-          <h3>Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window</a></h3>
-          <img src="../../images/cveng.png" alt="English CV" class="cv-image" onclick="openModal(this.src)">
+          <h3>Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window</a></h3><!-- new window -->
+          <img src="../../images/cveng.png" alt="English CV" class="cv-image" onclick="openModal(this.src)"><!-- modal -->
         </div>
       </div>
     </main><!-- --------main END--------------- -->
