--- a/src/html/about.html
+++ b/src/html/about.html
@@ -42,12 +42,13 @@
 
       <div class="about-item" id="take-a-look">
         <h2><i class="fas fa-globe"></i> Take a look</h2>
-
+        <div class="links">
         <a href="https://www.linkedin.com/in/laura-levist%C3%B6-8bba06282/" target="_blank"><i class="fa-solid fa-laptop-code"></i> LinkedIn</a>
         
         <a href="https://github.com/Larrry85" target="_blank"><i class="fa-solid fa-code-branch"></i> GitHub</a>
         
         <a href="https://koodsisu.fi/" target="_blank"><i class="fa-solid fa-code"></i> Kood/Sisu</a>      
+        </div>
       </div>
 
       <div class="about-item" id="contact-me">
