--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="./src/css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- ---------container-------------- -->
   <div class="container">
     <!-- ---------header-------------- -->
     <header>
-  <h1>Portfolio</h1>
+  <h1># Portfolio</h1>
 
   <nav><!-- ------------links----------- -->
     <ul>
-      <li><a href="./src/html/about.html">Enter</a></li>
+      <li><a href="./src/html/about.html">You may enter</a></li>
     </ul>
   </nav>
 </header><!-- --------header END--------------- -->
@@ -28,7 +29,7 @@
 
     <!-- --------footer--------------- -->
     <footer>
-    <p>© 2024 Laura Levistö</p>
+    <p>/* 2024 Laura Levistö */</p>
     </footer>
 
 </div> <!-- ----------container END------------- -->
