--- a/src/html/about.html
+++ b/src/html/about.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/about.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- ---------container-------------- -->
   <div class="container">
     <!-- ---------header-------------- -->
     <header>
-  <h1>Portfolio</h1>
+  <h1># Portfolio</h1>
 
   <nav><!-- ------------links----------- -->
     <ul>
@@ -27,7 +28,7 @@
 
   <!-- -----------main------------ -->
   <main  id="aboutpage">
-    <h1>About me</h1>
+    <h1>## About me</h1>
 
     <div class="about-grid"><!-- -----------grid------------ -->
 
@@ -62,7 +63,7 @@
 
   <!-- --------footer--------------- -->
   <footer>
-  <p>© 2024 Laura Levistö</p>
+  <p>/* 2024 Laura Levistö */</p>
   </footer>
 
 </div><!-- ----------container END------------- -->
