--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -7,13 +7,14 @@
   <title>CV - My Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/cv.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- ---------container-------------- -->
   <div class="container">
     <!-- ---------header-------------- -->
     <header>
-     <h1>Portfolio</h1>
+     <h1># Portfolio</h1>
 
       <nav><!-- ------------links----------- -->
       <ul>
@@ -26,16 +27,16 @@
 
     <!-- -----------main------------ -->
     <main id="resumepage">
-      <h1>CV</h1>
+      <h1>## CV</h1>
       <div class="cv-grid">
         <div class="cv-item">
           <h2>Finnish CV</h2>
-          <p>Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window</a></p><!-- new window -->
+          <p>** Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window **</a></p><!-- new window -->
           <img src="../../images/cvfin.png" alt="Finnish CV" class="cv-image" onclick="openModal(this.src)"><!-- modal -->
         </div>
         <div class="cv-item">
           <h2>English CV</h2>
-          <p>Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window</a></p><!-- new window -->
+          <p>** Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window **</a></p><!-- new window -->
           <img src="../../images/cveng.png" alt="English CV" class="cv-image" onclick="openModal(this.src)"><!-- modal -->
         </div>
       </div>
@@ -43,7 +44,7 @@
 
     <!-- --------footer--------------- -->
     <footer>
-    <p>© 2024 Laura Levistö</p>
+    <p>/* 2024 Laura Levistö */</p>
     </footer>
 
 </div><!-- ----------container END------------- -->
