--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -7,13 +7,14 @@
   <title>GitHub Projects - My Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/projects.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- ---------container-------------- -->
   <div class="container">
     <!-- ----------header------------- -->
     <header>
-      <h1>Portfolio</h1>
+      <h1># Portfolio</h1>
 
       <nav><!-- -----------links------------ -->
         <ul>
@@ -26,13 +27,13 @@
 
         <!-- --------main--------------- -->
         <main id="projects">
-          <h1>GitHub Projects</h1>
+          <h1>## GitHub Projects</h1>
             
         </main><!-- --------main END--------------- -->
 
     <!-- ---------footer-------------- -->
     <footer>
-      <p>© 2024 Laura Levistö</p>
+      <p>/* 2024 Laura Levistö */</p>
     </footer>
 
   </div><!-- ---------container END-------------- -->
