--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -7,7 +7,7 @@
   <title>GitHub Projects - My Portfolio</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/projects.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Open+Sans:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- ---------container-------------- -->
