--- a/src/html/cv.html
+++ b/src/html/cv.html
@@ -31,12 +31,12 @@
       <div class="cv-grid">
         <div class="cv-item">
           <h2>Finnish CV</h2>
-          <p>** Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window **</a></p><!-- new window -->
+          <p>** Click the picture to enlarge or <a href="../../images/cvfin.png" target="_blank">open in new window</a><p> **</p></p><!-- new window -->
           <img src="../../images/cvfin.png" alt="Finnish CV" class="cv-image" onclick="openModal(this.src)"><!-- modal -->
         </div>
         <div class="cv-item">
           <h2>English CV</h2>
-          <p>** Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window **</a></p><!-- new window -->
+          <p>** Click the picture to enlarge or <a href="../../images/cveng.png" target="_blank">open in new window</a><p> **</p></p><!-- new window -->
           <img src="../../images/cveng.png" alt="English CV" class="cv-image" onclick="openModal(this.src)"><!-- modal -->
         </div>
       </div>
